--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   font-size: 62.5%;
   line-height: 24px;
   font-weight: 400;
+  background-color: #161519;
 }
 *{
   box-sizing: border-box;
@@ -14,4 +15,24 @@ a {
 
 body {
   margin: 0;
+}
+
+.App{
+  width: 55rem;
+  background-color: #2B283A;
+  margin: auto;
+}
+
+
+/*Nav bar set up*/
+
+.nav-bar{
+  display: flex;
+  justify-content: center;
+  background-color: #8A2D2D;
+  color: #FFFFFF;
+}
+
+.nav-bar * {
+  margin: .5rem;
 }
